--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,16 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS  Widgets Gui REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets Gui REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS  Core Widgets Gui Network REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Widgets Gui Network REQUIRED)
 
 set(PROJECT_SOURCES
     main.cpp
     widget.h widget.cpp
     lb_weather.h lb_weather.cpp
+    downloader.h downloader.cpp
     resource.qrc
+
    )
 
 add_executable(${PROJECT_NAME} WIN32
@@ -31,8 +33,10 @@ add_executable(${PROJECT_NAME} WIN32
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
+    Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Gui
+    Qt${QT_VERSION_MAJOR}::Network
     )
 
 #SET (MY_RELEASE_DIR ${CMAKE_BINARY_DIR}_Deploy_${PROJECT_NAME})
